Fixes posts overflowing under mobile.

--- a/wrappers/md.scss
+++ b/wrappers/md.scss
@@ -7,7 +7,7 @@
         justify-content: center;
 
         .post-body {
-            max-width: 672px;
+            max-width: 100%;
 
             /**
              * Based on MUICSS's Table Component
